<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.doan.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.doan.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/nav_nophi"
        android:name="com.example.doan.ui.Nophi.nophiFragment"
        android:label="@string/menu_nophi"
        tools:layout="@layout/fragment_nophi" />
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.doan.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/action_logout"
        android:label="Logout"
        tools:layout="@layout/dialog_logout" />
</navigation>
<!--    android:name="com.example.dacn.ui.logout.LogoutFragment"-->
