<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_homead"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_homead" />
        <item
            android:id="@+id/nav_galleryad"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_galleryad" />
        <item
            android:id="@+id/nav_slideshowad"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshowad" />

        <item
            android:id="@+id/action_logout"
            android:title="Logout"
            android:icon="@drawable/baseline_logout_24"

            app:showAsAction="never" />


    </group>
</menu>